--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
       
       <li><b><a href="#">HOME</a></b></li>
-      <li><b><a href="#">ABOUT US</a></b></li>
+      <li><b><a href="https://sigmachad089.github.io/about-us/">ABOUT US</a></b></li>
       <li><b><a href="#">ZODIAC SIGNS</a></b></li>
      </ul>
     
@@ -141,4 +141,5 @@
 
 
 </body>
+
 </html>
