--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <ul>
       
-      <li><b><a href="#">HOME</a></b></li>
+      <li><b><a href="https://sigmachad089.github.io/pbe1/">HOME</a></b></li>
       <li><b><a href="https://sigmachad089.github.io/about-us/">ABOUT US</a></b></li>
-      <li><b><a href="#">ZODIAC SIGNS</a></b></li>
+      <li><b><a href="https://sigmachad089.github.io/zzodiac/">ZODIAC SIGNS</a></b></li>
      </ul>
     
  </nav>
@@ -143,3 +143,4 @@
 </body>
 
 </html>
+
